# rlm-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CRITICAL_PATH_v0.2.0.md  DAY_10_COMPLETE.md  DAY_11-13_COMPLETE.md  DAY_1_COMPLETE.md  DAY_2_COMPLETE.md  DAY_3_COMPLETE.md  DAY_4_COMPLETE.md  DAY_5_COMPLETE.md  DAY_6_COMPLETE.md  DAY_7_COMPLETE.md  DAY_8-9_COMPLETE.md  EVALUATION_REPORT.md  GITHUB_ISSUES_v0.2.0.md  HANDOFF.md  IMPLEMENTATION_CHECKLIST_v0.2.0.md  IMPLEMENTATION_GUIDE_v0.2.0.md  MCP_VALIDATION.md  MIGRATION_v0.1_to_v0.2.md  NEXT_STEPS.md  README.md  SOLUTION_DESIGN.md  SOLUTION_DESIGN_PATCHES.md  STATUS.md  TEST_REPORT.md  TEST_REPORT_FINAL.md  VALIDATION_REPORT.md  pyproject.toml  rlm-mcp-design-v013.md  rlm-mcp-implementation-plan-v013.md  test_mcp_client.py  validate_tools.py
.claude/: settings.local.json
docs/: LOGGING.md
skills/: SKILL.md
skills/patterns/: decomposition.md
src/rlm_mcp/: __init__.py  config.py  errors.py  logging_config.py  models.py  server.py
src/rlm_mcp/export/: __init__.py  github.py  secrets.py
src/rlm_mcp/index/: __init__.py  bm25.py  persistence.py
src/rlm_mcp/storage/: __init__.py  blobs.py  database.py
src/rlm_mcp/tools/: __init__.py  artifacts.py  chunks.py  docs.py  export.py  search.py  session.py
tests/: conftest.py  test_batch_loading.py  test_concurrency.py  test_e2e_integration.py  test_error_handling.py  test_export_comprehensive.py  test_index_persistence.py  test_integration.py  test_large_corpus.py  test_logging.py  test_provenance.py  test_storage.py  test_v022_fixes.py
(+2 files in other folders)
